--- a/JavaScript/01_표현식과 문.md
+++ b/JavaScript/01_표현식과 문.md
@@ -17,7 +17,9 @@
 
 ## 4. 문
 
-**![5-2](./img/1.png)프로그램을 구성하는 기본 단위이자 최소 실행 단위**
+**![5-2](./img/1.png)
+
+**프로그램을 구성하는 기본 단위이자 최소 실행 단위**
 [image:6F5681AE-1C0C-4D5D-8149-B21FDDE6CA9F-393-000017A8C83B05B5/5-2.png]
 문은 여러 토큰들로 구성된다. **토큰(token)이란 문법적인 의미를 가지며, 문법적으로 더이상 나눌 수 없는 코드의 기본 요소를 의미한다.** 예를 들어, 키워드, 식별자, 연산자, 리터럴, 세미콜론(;)이나 마침표(.) 등의 특수 기호는 문법적인 의미를 가지며, 문법적으로 더 이상 나눌 수 없는 코드의 기본 요소이므로 모두 토큰이다.
 
